--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@prisma/client": "6.1.0",
+    "arctic": "^2.3.3",
     "elysia": "latest"
   },
   "devDependencies": {
-    "bun-types": "latest"
+    "bun-types": "latest",
+    "prisma": "^6.1.0"
   },
   "module": "src/index.js"
 }
